# Harman-PQRS

./: .gitignore  CMakeLists.txt  Constants.hpp  Logger.hpp  README.md
include/: VideoProcessor.hpp
src/: VideoProcessor.cpp  main.cpp
tests/: TestsVideoProcessor.cpp
